Рефакторинг кода и расширение функционала
- Главная конфигурация теперь хранится в config.json (строго определено)
- Добавлена загрузка конфига и парсинг конфига в список
- Данные конфига теперь используются в определении пути где хранятся данные серверов и языковых пакетов, а так же для выбора локализации
- Теперь для каждой гильдии создаётся отдельная папка для данных, определённая в конфиге (по умолчанию ".data")

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@ __pycache__/
 .env
 keep_online.py
 old-main.py
+.data/server_id/logs_stored.txt
+.data/server_id/settings.txt
+.data/server_id/stats/разные статистики.txt
+.data/server_id/users/data-by-unique-user-id.txt
+locale/kick_phrases/en.txt
+locale/kick_phrases/ru.txt
