--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
 	"current_locale": "ru",
-	"server_data_path": ".data/",
-	"localization_path": "locale/"
+	"server_data_path": ".data",
+	"localization_path": "locale"
 }
