Прототипирование новых фич
- Добавление прототипа для работы с командами через слэш, в данном случае для будкщего /daily
- Улучшение обработки файлов класса FileAction для сохранения скачанных файлов
- Шаблон модуля прогресс-бара на скачивание для логирования в консоли
- Функция загрузки аватара бота (пока что из корневой папки и по простому названию cat.gif)

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ old-main.py
 .data/server_id/users/data-by-unique-user-id.txt
 locale/kick_phrases/en.txt
 locale/kick_phrases/ru.txt
+winter_forest_new.gif
+cat.gif
+90e66a39c6e1f833fc06362249567888.png
