- Добавление исключений при кулдауне на команды, с возможным возвратом счётчиком кулдауна. - Ограничение команд декораторами dpy библиотеки - Добавление класса для контант с названиями команд. Первая определена на /bots-kicked - Добавлен метод .get_settings в SDI для быстрого доступа к элементу настроек - Добавлена функция - универсальный обработчик сообщений, который получает данные, определеяет тип, и делает ответ в зависимости от того как была вызвана команда. Данная функция как короткая замена Hybrid_commands() от dpy - Чистка мусора

--- a/.data/_templates/settings.json
+++ b/.data/_templates/settings.json
@@ -11,5 +11,6 @@
                                 "react_code2"
                         ]
                 }
-        ]
+        ],
+        "prefix": "!!"
 }
