Добавлена команда /toggle для переключения настроек между ВКЛ \ ВЫКЛ ( True \ False )

--- a/.data/_templates/settings.json
+++ b/.data/_templates/settings.json
@@ -12,5 +12,6 @@
                         ]
                 }
         ],
-        "prefix": "!!"
+        "prefix": "!!",
+        "leave_notifications_enabled": false
 }
