Добавлена функция проверки ютуб каналов на наличие действующего стрима. Проверка по многим каналам.
- Добавлен параметр в глобальный конфиг определяющий кулдаун для Ютуба и Твича раздельно. Каждые N указанных секунд будет проверяться следующий канал из списка на наличие стримов.
- Добавлен модуль tools.py для утилит (возможно потом переименую. На данный момент там функция усреднения цвета для оформления постов о ютуб стримах.
- Стримы постятся на указанные серверы в указанные каналы, добавленные каналы.
- Добавляемые каналы валидируются, чтобы избежать ошибок.
- Для оформления Embed-сообщения используется аватар канала где находится стрим, а в качестве картинки - превью.
- Страница получается запросом и причёсывается через метод pretify от BS4. В получающемся яваскрипте спрятан JSON, содержащий все нужные данные, которые и используются для парсинга всего что нужно о канале и видео.
- Полностью переработан метод get_settings для SDI. Теперь он принимает любое число аргументов, и копает в поиске нужных параметров во вложенных словарях. Если совпадений не обнаружено на текущем уровне - проверка не идёт ещё глубже.
- Добавлен метод update_yt_cache внутри класса SDI  для добавления новых элементов в кэш уже опубликованных оповещений о стримах.
- Добавлен метод check_yt_cache внутри класса SDI  для проверки публиковался ли данный стрим на данном канале\сервере.
- На старте бота теперь проверяется по всем конфигам серверов сколько всего нужно будет проверок ютуб каналов. Кулдаун распределяется равномерно и с одинаковым промежутком (пока не учитывается глобальный конфиг)
-

--- a/.data/_templates/settings.json
+++ b/.data/_templates/settings.json
@@ -1,4 +1,6 @@
 {
+        "prefix": "!!",
+        "premium": "date-till-on",
         "autokick": [
                 "1",
                 {
@@ -12,6 +14,22 @@
                         ]
                 }
         ],
-        "prefix": "!!",
-        "leave_notifications_enabled": false
+        "leave_notifications_enabled": "False",
+        "notify": {
+                "options": {
+                        "member_quits": "False",
+                        "stream_starts": "False",
+                        "video_published": "False"
+                }
+        },
+        "streams": {
+                "options": {
+                        "post_chid": "0",
+                        "yt_parse_method": "0",
+                        "tw_parse_method": "0"
+                },
+                "streaming_channels": [
+                ]
+        }
+
 }
