Исправление критического бага с постом ютуб-стримов
- Раньше в случае, если стрим уже был опубликован, останавливался весь процесс публикации стримов в гильдии. Теперь проверка идёт как нужно, и если один стрим отсутствует, следующим проверкам это более не мешает.
- Добавлен глобальный кулдаун "global_stream_check_cd" в глобильный конфиг. Определяет время проверки между всеми видами стримов.
- Улучшена логика разных частей кода.
- Улучшены сообщения в консоли для более понятного результата. Лишние сообщения отключены.

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,7 @@ cat.gif
 .data/846356735487770627/
 .data/891288139849682954/
 .data/1231992456208187432/
+html_file.txt
+json.json
+solution.txt
+Заметки на колготках.txt
