--- a/config.json
+++ b/config.json
@@ -3,6 +3,7 @@
 	"server_data_path": ".data",
 	"templates_subpath": "_templates",
 	"localization_path": "locale",
+	"global_stream_check_cd": "5",
 	"youtube_fetch_cooldown": "20",
 	"twitch_fetch_cooldown": "20"
 }
