--- a/.data/_templates/settings.json
+++ b/.data/_templates/settings.json
@@ -9,18 +9,16 @@
                         "active": "False",
                         "ban_instead": "False",
                         "required_role_id": 0,
-                        "channel_to_farewall": 0
+                        "channel_to_farewall": 0,
+                        "kick_ban_reason": ""
                 },
-                "trap_channels": {
-                        "0": [
-                                "0",
-                                "<a:z_bye:1229599440352968725>"
-                        ],
-                        "channel_id2": [
-                                "message_id",
-                                "react_role"
+                "trap_channels": [
+                        [
+                                "925204884054229033",
+                                "1072806217824600074",
+                                "1229599440352968725"
                         ]
-                }
+                ]
         },
         "notify": {
                 "options": {
@@ -31,9 +29,9 @@
         },
         "streams": {
                 "options": {
-                        "post_chid": 735409258904027166,
-                        "yt_parse_method": "1",
-                        "tw_parse_method": "1"
+                        "post_chid": 0,
+                        "yt_parse_method": 1,
+                        "tw_parse_method": 1
                 },
                 "streaming_channels": [
                 ]
