Рефакторинг: Теперь код работает с обычными типами данных: строки, числа, логические, беря их прямо из конфигов в таком же виде. Раньше это были постоянно преобразуемые строки.
- Базовый шаблон также изменён

--- a/.data/_templates/settings.json
+++ b/.data/_templates/settings.json
@@ -6,18 +6,13 @@
         },
         "autokick": {
                 "options": {
-                        "active": "False",
-                        "ban_instead": "False",
+                        "active": false,
+                        "ban_instead": false,
                         "required_role_id": 0,
                         "channel_to_farewell": 0,
                         "kick_ban_reason": ""
                 },
                 "trap_channels": [
-                        [
-                                "925204884054229033",
-                                "1072806217824600074",
-                                "1229599440352968725"
-                        ]
                 ]
         },
         "notify": {
