Множественные улучшения кода и +2 команды: MOVE и COPY
- Обёртка для сообщений теперь возвращает объект сообщения, на случай если его нужно будет редактировать
- Оставшиеся параметры из строков True \ False переведены в булевые, шаблон конфига обновлён
- Куча старых комментариев удалены
- Новая команда /MOVE для переноса сообщений из одного канала в другой. Можно и туда же, на это нет ограничений. Старые сообщения удаляются, новые создаются ботом, имитируя пользователя.
- Новая команда /COPY для копирования сообщений. Идентичная /MOVE , но сообщения не удаляет после копирования.
- Исправления касательно высветления среднего цвета с аватарки пользователя. Значение тёмного понижено с 100\255 до 80\255, а множитель уменьшен, иначе получалось искажение цветов.
- Новая утилити функция "convert_chstr_to_chint" для конвертации канала переданного как строкой, так и в виде меншена, в обычное целое число для ID. Для работы нужен только аргумент канала, переданный в функцию слэш-команды.
- Новая утилити функция "validate_channel" для проверки, что канал с таким ID существует и находится на том же сервере, где вызвана команда.

--- a/.data/_templates/settings.json
+++ b/.data/_templates/settings.json
@@ -17,9 +17,9 @@
         },
         "notify": {
                 "options": {
-                        "member_quits": "False",
-                        "stream_starts": "False",
-                        "video_published": "False"
+                        "member_quits": false,
+                        "stream_starts": false,
+                        "video_published": false
                 }
         },
         "streams": {
