Новая команда /ADDSTREAM для добавление стримов на сервер от пользователя (без админ прав) и /TOGGLE allow-user-streams , чтобы включить эту команду. По умолчанию выключено.
- Добавлена соответствующая настройка в шаблон серверов.

--- a/.data/_templates/settings.json
+++ b/.data/_templates/settings.json
@@ -26,7 +26,8 @@
                 "options": {
                         "post_chid": 0,
                         "yt_parse_method": 1,
-                        "tw_parse_method": 1
+                        "tw_parse_method": 1,
+                        "allow-user-streams": false
                 },
                 "streaming_channels": [
                 ]
