Новая команда /SYNC для обновления встроенных команд на сервере. Сам бот теперь обновляет всем команды не чаще раза в сутки при запуске используя таймштампы.
- Новый параметр в глобальном конфиге "last_global_sync", содержащий таймштамп с прошлой синхронизации
- Синхронизация теперь проходит лишь с указанным кулдауном.
- Новая команда /SYNC может быть использована не чаще раза в сутки и требует админ прав.
- Добавлена функция для сохранения глобального конфига

--- a/config.json
+++ b/config.json
@@ -1,9 +1,10 @@
 {
-	"current_locale": "ru",
-	"server_data_path": ".data",
-	"templates_subpath": "_templates",
-	"localization_path": "locale",
-	"global_stream_check_cd": "15",
-	"youtube_fetch_cooldown": "20",
-	"twitch_fetch_cooldown": "20"
+    "current_locale": "ru",
+    "server_data_path": ".data",
+    "templates_subpath": "_templates",
+    "localization_path": "locale",
+    "global_stream_check_cd": "15",
+    "youtube_fetch_cooldown": "20",
+    "twitch_fetch_cooldown": "20",
+    "last_global_sync": 1720448447
 }
