--- a/config.json
+++ b/config.json
@@ -4,7 +4,8 @@
     "templates_subpath": "_templates",
     "localization_path": "locale",
     "global_stream_check_cd": "15",
-    "youtube_fetch_cooldown": "20",
-    "twitch_fetch_cooldown": "20",
-    "last_global_sync": 1720448447
+    "youtube_fetch_cooldown": "10",
+    "twitch_fetch_cooldown": "10",
+    "last_global_sync": 1738559914,
+    "debug": true
 }
