Добавлен ряд новых команд
- /playsound - запускает случайные звуки (пока что без настроек, по умолчанию берёт гусиные и утиные звуки), с кулдауном от 1 секунды до 30 минут.
- /count members @role - посчитать количество людей с определенной ролью
- /count gayness - узнать свою gayness, результат зависит от ника, оставлен простор для подкрутки

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,13 @@ output.txt
 cookies.json
 response.json
 soup.json
+playlists/_native/duck_quack_effect.mp3
+playlists/_native/goose/honk.mp3
+playlists/_native/goose/quak — копия — копия — копия — копия.mp3
+playlists/_native/goose/quak — копия — копия — копия (2).mp3
+playlists/_native/goose/quak — копия — копия — копия.mp3
+playlists/_native/goose/quak — копия — копия (2).mp3
+playlists/_native/goose/quak — копия — копия.mp3
+playlists/_native/goose/quak — копия (2).mp3
+playlists/_native/goose/quak — копия.mp3
+playlists/_native/goose/quak.mp3
