Улучшение команды /playsound
- Теперь можно передать playlist один из плейлистов на выбор: Goose и Zomboid (звуки не прилагаются). Если ничего не выбрано, то ставится Goose
- Добавлены min-max параметры, где можно задать минимальное время до воспроизведения звука и максимальное. Значение между ними выбирается рандомом. Параметры не обязательны. Если не указаны ставится промежуток от 1 сек до 30 минут.

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ playlists/_native/goose/quak — копия — копия.mp3
 playlists/_native/goose/quak — копия (2).mp3
 playlists/_native/goose/quak — копия.mp3
 playlists/_native/goose/quak.mp3
+playlists/_native/zomboid/
